docs: expand troubleshooting section with lessons learned from CI/CD implementation